# hello-world

./: Cargo.toml  README.md  manifest-template.toml  manifest.toml
.github/actions/release-actor/: action.yml
.github/workflows/: auto-release.yml  custom-action-release.yml  release.yml  reusable-actor-release.yml
src/: bindings.rs  lib.rs
wit/: world.wit
